🛠 fix: Half grid is broken in print viewport

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -183,6 +183,10 @@ footer {
     padding: 0;
   }
 
+  main > section.half {
+    grid-column: unset;
+  }
+
   div {
     break-inside: avoid;
     page-break-inside: avoid;
